--- a/React HookForm Challenge/react-hook-form-challenge/package.json
+++ b/React HookForm Challenge/react-hook-form-challenge/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "react-hook-form-challenge",
+  "name": "completed",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookform/resolvers": "^2.8.5",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "libphonenumber-js": "^1.9.44",
-    "react": "^17.0.2",
-    "react-confetti": "^6.0.1",
-    "react-dom": "^17.0.2",
-    "react-dropzone": "^11.5.1",
-    "react-hook-form": "^7.22.5",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "sweetalert2": "^11.3.4",
-    "web-vitals": "^2.1.3",
-    "yup": "^0.32.11"
+    "@hookform/resolvers": "^0.1.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "express-rate-limit": "^5.2.6",
+    "libphonenumber-js": "^1.7.56",
+    "material-ui": "^0.20.2",
+    "react": "^16.13.1",
+    "react-confetti": "^6.0.0",
+    "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.3",
+    "react-hook-form": "^6.4.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "sweetalert2": "^9.17.1",
+    "yup": "^0.29.3",
+    "concurrently": "^5.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
+    "morgan": "^1.10.0"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -30,10 +37,7 @@
     "dev": "concurrently --kill-others \"npm run start:server\" \"npm run start\""
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -46,12 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "concurrently": "^7.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.2",
-    "express-fileupload": "^1.2.1",
-    "morgan": "^1.10.0"
   }
 }
