--- a/React HookForm Challenge/react-hook-form-challenge/package.json
+++ b/React HookForm Challenge/react-hook-form-challenge/package.json
@@ -20,15 +20,14 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "sweetalert2": "^9.17.1",
-    "yup": "^0.29.3"
-  },
-  "devDependencies": {
+    "yup": "^0.29.3",
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "morgan": "^1.10.0"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
