--- a/_Cursos/ReactEmGeral/Dave_Gray_Tutorials/Full_Node_Backend_API/03_Basic_WebServerExpress/package.json
+++ b/_Cursos/ReactEmGeral/Dave_Gray_Tutorials/Full_Node_Backend_API/03_Basic_WebServerExpress/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "express": "^4.17.3",
     "uuid": "^8.3.2"
